[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scenes/Enemy/ShooterEnemy/ShooterEnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Enemy/ShooterEnemy/ArcherEnemy/ArcherEnemy.gd" type="Script" id=2]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
type = 1

[node name="Sprite" parent="." index="1"]
modulate = Color( 0.0196078, 0.027451, 0.501961, 1 )

[node name="ShotCooldown" parent="." index="4"]
wait_time = 2.0

[node name="RapidCooldown" type="Timer" parent="." index="5"]
wait_time = 0.2

[node name="MoveCooldown" parent="." index="6"]
wait_time = 1.0

[connection signal="timeout" from="RapidCooldown" to="." method="_on_RapidCooldown_timeout"]
